--- a/blogpost.html
+++ b/blogpost.html
@@ -5,8 +5,11 @@
 
     </head>
     <body>
-        
-        <h1> aque vamos a hexear un blog post </h1>
-        <p> y este es el parrafo de inicio </p>
+        <div id = "container">
+         <div id="post">        
+            <h1> este es el titulo atractivo e interesante del post </h1>
+            <p> y este es el parrafo de inicio donde bamos a explicar las cosas increibles que se pueden hacer con </p>
+         </div>
+    </div>
     </body>
 </html>
