--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <div id = "container">
+            <div id="cabecera">
+
+            </div>            
+        
          <div id="post">        
             <h1> este es el titulo atractivo e interesante del post </h1>
             <p> y este es el parrafo de inicio donde bamos a explicar las cosas increibles que se pueden hacer con </p>
