--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,7 @@
     <body>
         <div id = "container">
             <div id="cabecera">
+                hiperblog <span id="tagline"> Tu blog de confianza </span>
 
             </div>            
         
