--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,8 @@
          <div id="post">        
             <h1> este es el titulo atractivo e interesante del post </h1>
             <p> y este es el parrafo de inicio donde bamos a explicar las cosas increibles que se pueden hacer con </p>
+            <p> los blogs son la mejor forma de compartit informacion y tus ideas. mucho mas que ir a conferencias o salir en youtube exepto si eres un rockstar. pero estadisticamente no lo eres.... por ahora.</p> 
+            
          </div>
     </div>
     </body>
