--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>el titulo del post</title>
+        <title>bienvenido a hyperblo 2.0</title>
         <link rel="stylesheet" href="css/estilos.css">
 
     </head>
